# ArgsParser

./: .gitignore  README.md
ArgsParser/: ArgsParser.sln
ArgsParser/ArgsParser/: .vimrc  ArgsParser.cpp  ArgsParser.vcxproj  ArgsParser.vcxproj.filters  CMakeLists.txt  CMakeUserPresets.json  commands-msbuild.txt  commands-ninja-multi-config.txt  commands-simple-ninja.txt  conanfile.txt  main.cpp
ArgsParser/ArgsParser/Example/: CMakeLists.txt  main.cpp
ArgsParser/ArgsParser/Source/Abstractions/: Arg.cpp
ArgsParser/ArgsParser/Source/Parser/: ArgsParser.cpp  ArgsParser.h
ArgsParser/ArgsParser/folderInfo/: CMakeLists.txt  main.cpp
ArgsParser/ArgsParser/source/abstractions/: Arg.hpp  ValueArg.hpp
ArgsParser/ArgsParser/source/args/: BoolArg.cpp  IntArg.cpp  MultiStringArg.cpp
ArgsParser/ArgsParser/source/parser/: ArgsParser.hpp
ArgsParser/ArgsParser/src/abstractions/: Arg.cpp  Arg.hpp  CMakeLists.txt  IValidator.hpp  ValueArg.cpp  ValueArg.hpp
ArgsParser/ArgsParser/src/args/: Args.cpp  Args.hpp  BaseArg.hpp  BaseArgs.cpp  BoolArg.cpp  BoolArg.hpp  CMakeLists.txt  EmptyArg.cpp  EmptyArg.hpp  HelpArg.cpp  HelpArg.hpp  IntArg.cpp  IntArg.hpp  MultiEmptyArg.cpp  MultiEmptyArg.hpp  MultiIntArg.cpp  MultiIntArg.hpp  MultiStringArg.cpp  MultiStringArg.hpp  StringArg.cpp  StringArg.hpp
ArgsParser/ArgsParser/src/catalogs/: CMakeLists.txt  Catalog.cpp  Catalog.hpp
ArgsParser/ArgsParser/src/constants/: CMakeLists.txt  constants.hpp
ArgsParser/ArgsParser/src/parser/: ArgsParser.cpp  ArgsParser.hpp  CMakeLists.txt
ArgsParser/ArgsParser/src/results/: ArgumentIsAlreadyDefined.cpp  ArgumentIsAlreadyDefined.hpp  CMakeLists.txt  HandleResult.cpp  HandleResult.hpp  MissingParameter.cpp  MissingParameter.hpp  NoSuchArgument.cpp  NoSuchArgument.hpp  NotValid.cpp  NotValid.hpp  Result.cpp  Result.hpp  StringValueIsEmpty.cpp  StringValueIsEmpty.hpp  Success.cpp  Success.hpp
ArgsParser/ArgsParser/src/threads/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.hpp
ArgsParser/ArgsParser/src/utils/: CMakeLists.txt  constants.hpp  converter.hpp
ArgsParser/ArgsParser/src/validators/: CMakeLists.txt  IntRangeValidator.cpp  IntRangeValidator.hpp  PositiveIntValidator.cpp  PositiveIntValidator.hpp  StringLengthValidator.cpp  StringLengthValidator.hpp  Validators.cpp  Validators.hpp
ArgsParser/ArgsParser/tests/: CMakeLists.txt  main.cpp
